--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "mukiibi-peter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
-  }
+    "name": "mukiibi-peter",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.2",
+        "@fortawesome/free-solid-svg-icons": "^6.1.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@heroicons/react": "^1.0.6",
+        "autoprefixer": "^10.4.8",
+        "next": "12.2.5",
+        "postcss": "^8.4.16",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-fontawesome": "^1.7.1",
+        "tailwindcss": "^3.1.8"
+    },
+    "devDependencies": {
+        "eslint": "8.22.0",
+        "eslint-config-next": "12.2.5"
+    }
 }
